@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:ShowcaseExample"
     xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
     xmlns:gxl="clr-namespace:GraphX;assembly=GraphX.Controls"
     xmlns:conv="clr-namespace:GraphX.Converters;assembly=GraphX.Controls">
