@@ -11,11 +11,13 @@ namespace GraphX
     /// Base class for graph edge
     /// </summary>
     /// <typeparam name="TVertex">Vertex class</typeparam>
-    public abstract class EdgeBase<TVertex>: WeightedEdge<TVertex>, IIdentifiableGraphDataObject, IRoutingInfo
+    public abstract class EdgeBase<TVertex> : IGraphXEdge<TVertex>
     {
         public EdgeBase(TVertex source, TVertex target, double weight = 1)
-            : base(source, target, weight)
         {
+            Source = source;
+            Target = target;
+            Weight = weight;
             ID = -1;
         }
 
@@ -28,15 +30,19 @@ namespace GraphX
         /// Returns true if Source vertex equals Target vertex
         /// </summary>
         [YAXDontSerialize]
-        public bool IsSelfLoop
-        {
-            get { return Source.Equals(Target); }
-        }
+        public bool IsSelfLoop { get { return Source.Equals(Target); } }
 
         /// <summary>
         /// Routing points collection used to make Path visual object
         /// </summary>
-        [YAXCustomSerializer(typeof(YAXPointArraySerializer))]
+        [YAXCustomSerializer(typeof (YAXPointArraySerializer))]
         public Point[] RoutingPoints { get; set; }
+
+        public TVertex Source { get; set; }
+
+        public TVertex Target { get; set; }
+
+        public double Weight { get; set; }
+
     }
 }
